# ai-librarian

./: .gitignore  README.md  tmpclaude-517b-cwd
poc/: .dockerignore  .env.example  .gcloudignore  .gitignore  AUTONOMOUS_ROUTING_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  GCP_SETUP.md  PROJECT_CONTEXT.md  README.md  app.py  cli_error_log.txt  cli_fail.txt  config.py  debug_import.py  debug_main_import.py  deploy.sh  env_example.txt  main.py  pyproject.toml  quick_test.py  refactor_test_output.txt  requirements.txt  review_final.md  run.py  run.sh  run_streamlit.py  setup_secrets.py  streamlit_app.py  streamlit_app_backup.py  styles.css  supabase_schema.sql  test_autonomous_routing.py  test_output.txt  test_recursive_search.py  test_setup.py  test_streaming.py  tmpclaude-aa5c-cwd  verify_rag.py
poc/code-review/: 00-overview.md  01-supervisor.md  02-adapters.md  03-workers.md  04-memory.md  05-api.md  06-prompts.md  review.md
poc/migrations/: 001_auth_schema.sql
poc/src/: __init__.py  utils.py
poc/src/adapters/: __init__.py  base.py  deepseek.py  gemini.py  openai.py
poc/src/api/: __init__.py  app.py  books.py  books_schemas.py  routes.py  schemas.py
poc/src/auth/: __init__.py  dependencies.py  jwt_handler.py  middleware.py  password.py  rate_limit.py  repository.py  routes.py  schemas.py  service.py  utils.py
poc/src/langchain/: __init__.py
poc/src/langchain/agents/: __init__.py  llm_router.py
poc/src/langchain/graphs/: __init__.py  autonomous_question_answering_graph.py  question_answering_graph.py  selective_question_answering_graph.py
poc/src/langchain/schemas/: __init__.py  question_answer_schema.py
poc/src/langchain/services/: __init__.py  langchain_answer_service.py
poc/src/langchain/tools/: __init__.py  llm_direct_tool.py  vector_search_tool.py  web_search_tool.py
poc/src/memory/: __init__.py  base.py  in_memory.py  supabase_memory.py
poc/src/models/: __init__.py  answer.py  document.py  question.py
poc/src/rag/: service.py  worker.py
poc/src/rag/api/: __init__.py  formatters.py  validators.py
poc/src/rag/cli/: __init__.py  __main__.py  formatters.py  ingest.py  quality.py  repl.py  search.py  validators.py
poc/src/rag/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
poc/src/rag/embedding/: __init__.py  doc_id.py  provider.py  validators.py
poc/src/rag/generation/: __init__.py  client.py  dto.py  models.py  pipeline.py  (+2 more)
poc/src/schemas/: models.py
poc/src/services/: __init__.py  embedding_service.py  query_processor.py  routing_service.py  vector_store.py
poc/src/supervisor/: __init__.py  prompts.py  supervisor.py  tools.py
poc/src/utils/: __init__.py  config.py  helpers.py
poc/src/workers/: __init__.py  base.py  factory.py  rag_worker.py  web_worker.py
poc/static/: index.html
poc/tests/: __init__.py  conftest.py  diagnose_imports.py  test_api.py  test_api_routes.py  test_cli_use_cases.py  test_eval.py  test_ingest_use_case.py  test_memory.py  test_prompts.py  test_query_optimizer.py  test_rag_use_case.py  test_rag_worker.py  test_real_supabase_integration.py  test_restful_api.py  test_stream_event_type.py  test_supabase_mock_integration.py  test_supervisor.py  test_tools.py
poc/tests/api/: test_sessions_auth.py
poc/tests/auth/: conftest.py  test_books_integration.py  test_dependencies.py  test_integration.py  test_jwt_handler.py  test_native_flow.py  test_native_flow_poc.py  test_password.py  test_routes.py  test_security.py  test_service.py  test_startup_config.py
poc/tests/memory/: test_ensure_session.py
(+150 files in other folders)
