[project]
name = "ai-librarian"
version = "2.0.0"
description = "Supervisor Pattern based RAG System"
requires-python = ">=3.12"

dependencies = [
    # Core
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    # Vector DB
    "pymilvus>=2.5.0",
    # Web Search
    "ddgs>=5.0.0",
    # Data
    "pydantic>=2.0",
    # UI
    "streamlit>=1.40.0",
    # Utils
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
