[project]
name = "ai-librarian"
version = "2.0.0"
description = "Supervisor Pattern based RAG System"
requires-python = ">=3.12"

dependencies = [
    # Core
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "supabase>=2.0.0",
    # Web Search
    "ddgs>=5.0.0",
    # Data
    "pydantic>=2.0",
    # UI
    "streamlit>=1.40.0",
    # Utils
    "python-dotenv>=1.0.0",
    "fastapi>=0.127.1",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.1.1",
    "loguru>=0.7.3",
    # RAG Dependencies
    "google-generativeai>=0.7.0",
    "langchain-core>=0.3.0",
    "langchain-classic>=1.0.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.0",
    "langchain-voyageai>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "pdfminer-six>=20231228",
    "pymupdf>=1.24.0",
    "psycopg[binary,pool]>=3.2.0",
    "langchain-community>=0.4.1",
    "lark>=1.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
